--- a/_sass/random-stuff.scss
+++ b/_sass/random-stuff.scss
@@ -3,6 +3,7 @@
     top: 0px;
     width: 100%;
     background: $background-color;
+    z-index: 99;
 }
 
 
